fixed gallery on smaller screens

--- a/style.scss
+++ b/style.scss
@@ -45,10 +45,13 @@ header {
     justify-content: space-evenly;
     align-items: center;
     p {
-        max-width: 15vw;
+        max-width: 15vw; 
+        @media only screen and (max-width:50rem) and (min-width:40rem)  {
+            font-size: 0.8em;
+        }
     }
     h1 {
-        max-width: 15vw; 
+        max-width: 15vw;
     }
     img {
         min-height: 4rem;
@@ -62,7 +65,7 @@ header {
         & li {
             display: inline-block;
             font-size: 1.4em;
-            @media only screen and (max-width: 50rem){
+            @media only screen and (max-width:50rem){
                 font-size: 1em;
                 display: block;
             }
@@ -183,6 +186,7 @@ aside {
     margin-top: 2em;
     @media only screen and (max-width:25rem) {
         float: none;
+        margin-bottom: 1em;
     }
 }
 
@@ -215,6 +219,9 @@ article {
     margin-top: -25em;
     scrollbar-width: thin;
     scrollbar-color: rebeccapurple black;
+    @media only screen and (max-width:30rem) {
+        margin-top: -15rem;
+    }
 }
 
 footer p:last-of-type {
